fixed body overflow

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -116,6 +116,12 @@ html.has-scroll-dragging {
   bottom: 0; 
 }
 
+@media screen and (max-width: $md) {
+  .dsc {
+    overflow: hidden;
+  }
+}
+
 .preloader {
   width: 100%;
   height: 100vh;
@@ -204,14 +210,14 @@ html.has-scroll-dragging {
   }
 }
 
-.ball-cursor {
-  width: 20px;
-  height: 20px;
-  position: absolute;
-  top: 0;
-  left: 0;
-  border: 1px solid $accent;
-  border-radius: 50%;
-  z-index: 2001;
-  pointer-events: none;
-}
+// .ball-cursor {
+//   width: 20px;
+//   height: 20px;
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   border: 1px solid $accent;
+//   border-radius: 50%;
+//   z-index: 2001;
+//   pointer-events: none;
+// }
